2007-06-22  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Translate the program description properly (#450161, Gabor Kelemen)

2007-06-21  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	Bump musicbrainz requirement, required for #393707.

2007-06-18  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Don't allow NULL track titles (#435964).

2007-06-18  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Correctly lookup the album artist (#393707).

2007-06-15  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	* src/sj-extracting.c:
	Set the label manually to force atk to update. Very sick but it
	works. (#364371, thanks Patrick Wade).

2007-06-03  Ross Burton  <ross@burtonini.com>

	* src/sound-juicer.h:
	* src/sj-main.c:
	Don't manually create an "all" debug category, GLib does that for you.

2007-05-14  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* NEWS:
	Version 2.19.1.

2007-05-14  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	Remove AM_MAINTAINER_MODE.

2007-05-14  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Use g_strerror() instead of converting sterror() to UTF-8, and get
	the error message before doing anything else (#438122).

2007-05-14  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-extractor.c:
	The profile fragment does need to have an element first otherwise
	it may not be a valid pipeline if it starts with caps. Add fakesrc.

2007-05-14  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-cdtext.h:
	* libjuicer/sj-metadata-musicbrainz.h:
	Fix typo in the _TYPE define which broke startup. Thanks Emmanuele
	for noticing the problem.
	
2007-05-14  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-cdtext.c:
	* libjuicer/sj-metadata-musicbrainz.c:
	Use G_DEFINE_TYPE_WITH_CODE.

2007-05-13  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-cdtext.c:
	Update to changes in SjMetadata object.
