@@ -1,3 +1,8 @@
+2007-07-05  Ross Burton  <ross@burtonini.com>
+
+	* libjuicer/sj-extractor.c:
+	Be more paranoid when removing sources.
+
 2007-06-22  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-main.c:
